Start Unix/Linux support

--- a/make/global.ini
+++ b/make/global.ini
@@ -7,8 +7,20 @@
 #
 
 
+# Uncomment following line, if you wish to debug the build make system.
+# The MXCPP_MAKE_DEBUG can also be set on the make command line.
+# MXCPP_MAKE_DEBUG := 1
+
+# Allow the value '0' for disabling the debug.
+# 'override' directive for working even for make command line.
+override MXCPP_MAKE_DEBUG := $(filter-out 0,$(MXCPP_MAKE_DEBUG))
+
+# Root of makefiles.
+MXCPP_MAKEFILE_ROOT := $(dir $(word $(words $(MAKEFILE_LIST)),$(MAKEFILE_LIST)))
+$(if $(strip $(MXCPP_MAKE_DEBUG)),$(warning MXCPP_MAKEFILE_ROOT: $(MXCPP_MAKEFILE_ROOT)))
+
 # Version of the library.
-MXCPP_LIBRARY_VERSION = 01
+include $(MXCPP_MAKEFILE_ROOT)version.ini
 
 # The library configuration suffix.
 MXCPP_CONFIG_SUFFIX := mx
@@ -94,10 +106,11 @@ MXCPP_MOD_DEBUG := d
 # Construct library name for different build types.
 MXCPP_LIB_CONSTRUCT_NAME = $(MXCPP_LIBRARY_NAME)$(1)
 MXCPP_LIBMT_CONSTRUCT_NAME = $(MXCPP_LIBRARY_NAME)mt$(1)
-MXCPP_DLL_CONSTRUCT_NAME = $(MXCPP_LIBRARY_NAME)$(MXCPP_LIBRARY_VERSION)$(1)
+MXCPP_DLL_CONSTRUCT_NAME = $(MXCPP_LIBRARY_NAME)$(MXCPP_LIBRARY_VERSION_MAJOR)$(MXCPP_LIBRARY_VERSION_MINOR)$(1)
 MXCPP_LIB_CONSTRUCT_FULLNAME = $(LIB_PFX)$(call MXCPP_LIB_CONSTRUCT_NAME,$(1)).$(LIB_SFX)
 MXCPP_LIBMT_CONSTRUCT_FULLNAME = $(LIB_PFX)$(call MXCPP_LIBMT_CONSTRUCT_NAME,$(1)).$(LIB_SFX)
-MXCPP_DLL_CONSTRUCT_FULLNAME = $(DLL_PFX)$(call MXCPP_DLL_CONSTRUCT_NAME,$(1)).$(DLL_SFX)
+MXCPP_DLL_CONSTRUCT_FULLNAME_SIMPLE = $(DLL_PFX)$(call MXCPP_DLL_CONSTRUCT_NAME,$(1)).$(DLL_SFX)
+MXCPP_DLL_CONSTRUCT_FULLNAME = $(call MXCPP_DLL_CONSTRUCT_FULLNAME_SIMPLE,$(1))$(if $(strip $(LN)),.$(MXCPP_LIBRARY_VERSION_MAJOR).$(MXCPP_LIBRARY_VERSION_MINOR).$(MXCPP_LIBRARY_VERSION_INTERFACE).$(MXCPP_LIBRARY_VERSION_BUILD))
 
 
 MXCPP_LIBS :=	\
