--- a/make/msw/dos16/gcc/makefile.ini
+++ b/make/msw/dos16/gcc/makefile.ini
@@ -41,7 +41,7 @@ CC_INCLUDE := -I
 
 # Flags for different build configurations.
 CFLAGS_DEBUG := -Wall -g3
-CFLAGS_RELEASE := -w -o2
+CFLAGS_RELEASE := -w -O2
 
 
 # C++ compiler settings.
