--- a/make/msw/dos16/makefile
+++ b/make/msw/dos16/makefile
@@ -2,7 +2,7 @@
 # @file
 #
 # Makefile for the Demo C++ Framework project
-#     - DOS (16-bit) global makefile.
+#     - batch processing makefile for DOS 16-bit.
 #
 # This makefile is mainly serving for testing purposes - building targets with
 # all supported available compilers under current system.
