--- a/make/msw/platform.ini
+++ b/make/msw/platform.ini
@@ -35,6 +35,15 @@ RM := del
 # Informational output (echoing).
 ECHO := echo
 
+
+# Link tool.
+#
+# @param $(1) Source of the link.
+# @param $(1) Destination of the link.
+#
+# LN = junction $(2) $(1)
+
+
 # Macros for hiding command output.
 NOOUT := >NUL
 NOERROUT := 2>NUL
@@ -50,6 +59,7 @@ MXCPP_CFLAGS_PLATFORM :=
 MXCPP_CXXFLAGS_PLATFORM :=
 
 
+# List of used platform libraries.
 MXCPP_LIBS_PLATFORM :=	\
 $(MXCPP_LIBS_SYSTEM)
 
