--- a/make/msw/win32/gcc/makefile.ini
+++ b/make/msw/win32/gcc/makefile.ini
@@ -38,8 +38,8 @@ CC_INCLUDE := -I
 
 # Flags for different build configurations.
 CFLAGS_DEBUG := -Wall -g3
-CFLAGS_RELEASE := -w -o2
-CFLAGS_DLL :=
+CFLAGS_RELEASE := -w -O2
+CFLAGS_DLL_DLL :=
 # -fPIC
 
 
@@ -65,7 +65,7 @@ CXX_INCLUDE := $(CC_INCLUDE)
 # Flags for different build configurations.
 CXXFLAGS_DEBUG := $(CFLAGS_DEBUG)
 CXXFLAGS_RELEASE := $(CFLAGS_RELEASE)
-CXXFLAGS_DLL := $(CFLAGS_DLL)
+CXXFLAGS_DLL_DLL := $(CFLAGS_DLL_DLL)
 
 
 # Resource compiler settings.
@@ -125,7 +125,7 @@ LNKC_OUT := $(CXX_OUT)
 # Flags for different build configurations.
 LNKC_FLAGS_DEBUG := $(CXXFLAGS_DEBUG)
 LNKC_FLAGS_RELEASE := $(CXXFLAGS_RELEASE)
-LNKC_FLAGS_DLL :=
+LNKC_FLAGS_DLL := $(CXXFLAGS_DLL) $(CXXFLAGS_DLL_EXE)
 
 LNKC_LIB_PFX := -l
 
@@ -158,7 +158,7 @@ DLLC_OUT := $(LNKC_OUT)
 # Flags for different build configurations.
 DLLC_FLAGS_DEBUG := $(LNKC_FLAGS_DEBUG)
 DLLC_FLAGS_RELEASE := $(LNKC_FLAGS_RELEASE)
-DLLC_FLAGS_DLL := $(LNKC_FLAGS_DLL)
+DLLC_FLAGS_DLL := $(CXXFLAGS_DLL) $(CXXFLAGS_DLL_DLL)
 
 
 # Addditional clean masks for 'clean...' targets.
