--- a/make/msw/win32/system.ini
+++ b/make/msw/win32/system.ini
@@ -2,7 +2,7 @@
 # @file
 #
 # Makefile for the Demo C++ Framework project
-#     - Windows 32 system dependent options (definitions).
+#     - Windows (32-bit) system dependent options (definitions).
 #
 # @author Emil Maskovsky
 #
