--- a/make/msw/win64/system.ini
+++ b/make/msw/win64/system.ini
@@ -4,7 +4,7 @@
 # @file
 #
 # Makefile for the Demo C++ Framework project
-#     - Windows 64 system dependent options (definitions).
+#     - Windows (64-bit) system dependent options (definitions).
 #
 # @author Emil Maskovsky
 #
