Fix Unix/Linux builds

--- a/make/unix/linux/gcc32/makefile.ini
+++ b/make/unix/linux/gcc32/makefile.ini
@@ -25,7 +25,7 @@ CC := gcc
 # The compiler global flags.
 # (used standardized name CFLAFS, which can be
 # overridden on the make command line)
-CFLAGS := -m32
+#CFLAGS := -m32
 
 # Output name flag.
 CC_OUT := -o 
@@ -75,7 +75,7 @@ CXXFLAGS_DLL_DLL := $(CFLAGS_DLL_DLL)
 # The linker global flags.
 # (used standardized name LDFLAGS, which can be
 # overridden on the make command line)
-LDFLAGS :=
+LDFLAGS := -L.
 
 # Prefix of object libraries.
 # (can be empty)
@@ -124,10 +124,14 @@ LIBC_OUT :=
 # The linker executable.
 DLLC := $(LNKC)
 
+# Prefix of shared libraries.
+# (can be empty)
+DLL_PFX = lib
+
 # The linker global flags.
 # (includes standard name LDFLAGS, which can be
 # overridden on the make command line)
-DLLC_FLAGS := $(LNKC_FLAGS) -pie -shared
+DLLC_FLAGS := $(LNKC_FLAGS) -fPIC -shared
 
 # Output name flag.
 DLLC_OUT := $(LNKC_OUT)
