--- a/make/unix/linux/system.ini
+++ b/make/unix/linux/system.ini
@@ -17,8 +17,8 @@ $(MXCPP_SRC_LIST_COMPILER)
 DLL_SFX := so
 
 # System configuration flags.
-#MXCPP_CFLAGS_SYSTEM := $(CC_DEFINE)LINUX
-#MXCPP_CXXFLAGS_SYSTEM := $(CXX_DEFINE)LINUX
+MXCPP_CFLAGS_SYSTEM := $(CC_DEFINE)LINUX
+MXCPP_CXXFLAGS_SYSTEM := $(CXX_DEFINE)LINUX
 
 MXCPP_LIBS_SYSTEM :=	\
 $(MXCPP_LIBS_COMPILER)
