--- a/make/unix/platform.ini
+++ b/make/unix/platform.ini
@@ -22,7 +22,7 @@ PATH_SEP := /
 # Create directory.
 MKDIR := mkdir
 # Change directory.
-CHDIR := chdir
+CHDIR := cd
 # Remove directory.
 RMDIR := rmdir
 # Remove file.
@@ -37,7 +37,7 @@ ECHO := echo
 # @param $(1) Source of the link.
 # @param $(1) Destination of the link.
 #
-LN = ln -s $(1) $(2)
+LN = ln -s ./$(1) $(2)
 
 
 # Macros for hiding command output.
