Various code improvements

--- a/make/bakedefs.ini
+++ b/make/bakedefs.ini
@@ -22,9 +22,9 @@ define MXCPP_BATCHMAKE_RULES_TARGET_SUBSYSTEM
 $(1):	$(1)_$(2)
 
 $(1)_$(2):
-	@echo *** Running the target [$(1)] for the compiler [$(2)] ... *** 
+	@echo +++ Running the target [$(1)] for the compiler [$(2)] ... +++ 
 	@$(if $(strip $(MXCPP_BATCHMAKE_$(2)_SETUP)),$(MXCPP_BATCHMAKE_$(2)_SETUP) && )$(MAKE) -C $(2) --no-print-directory -$(MAKEFLAGS) $(1)
-	@echo *** ... done the target [$(1)] for the compiler [$(2)]. ***
+	@echo +++ ... done the target [$(1)] for the compiler [$(2)]. +++
 
 endef	# MXCPP_BATCHMAKE_RULES_TARGET_SUBSYSTEM
 
