--- a/make/msw/dos16/gcc/makefile.ini
+++ b/make/msw/dos16/gcc/makefile.ini
@@ -40,8 +40,8 @@ CC_DEFINE := -D
 CC_INCLUDE := -I
 
 # Flags for different build configurations.
-CFLAGS_DEBUG := -Wall -g3
-CFLAGS_RELEASE := -w -O2
+CFLAGS_DEBUG := -g3 -Wall
+CFLAGS_RELEASE := -O2 -w
 
 
 # C++ compiler settings.
@@ -76,7 +76,7 @@ CXXFLAGS_RELEASE := $(CFLAGS_RELEASE)
 # The linker global flags.
 # (used standardized name LDFLAGS, which can be
 # overridden on the make command line)
-LDFLAGS :=
+LDFLAGS := -L.
 
 # Prefix of object libraries.
 # (can be empty)
