--- a/make/msw/win32/gcc/makefile.ini
+++ b/make/msw/win32/gcc/makefile.ini
@@ -25,7 +25,7 @@ CC := gcc
 # The compiler global flags.
 # (used standardized name CFLAFS, which can be
 # overridden on the make command line)
-CFLAGS :=
+CFLAGS := -Winline -Winvalid-pch
 
 # Output name flag.
 CC_OUT := -o 
@@ -37,10 +37,10 @@ CC_DEFINE := -D
 CC_INCLUDE := -I
 
 # Flags for different build configurations.
-CFLAGS_DEBUG := -Wall -g3
-CFLAGS_RELEASE := -w -O2
-CFLAGS_DLL_DLL :=
-# -fPIC
+CFLAGS_DEBUG := -g3 -Wall -Wextra -Wfloat-equal -Wundef -Wendif-labels -Wshadow -Wpointer-arith -Wcast-qual -Wcast-align -Wwrite-strings -Wconversion -Waggregate-return -Wmissing-noreturn -Wmissing-format-attribute -Wpacked -Wpadded -Wredundant-decls -Wunreachable-code
+CFLAGS_DEBUG_EXTRA := -Wtraditional -Wdeclaration-after-statement -Wbad-function-cast -Wstrict-prototypes -Wold-style-definition -Wmissing-prototypes -Wmissing-declarations -Wnested-externs
+CFLAGS_RELEASE := -O2 -Wdisabled-optimization
+CFLAGS_DLL_DLL := -fPIC
 
 
 # C++ compiler settings.
@@ -51,7 +51,7 @@ CXX := g++
 # The compiler global flags.
 # (used standardized name CXXFLAGS, which can be
 # overridden on the make command line)
-CXXFLAGS := $(CFLAGS) -fexceptions
+CXXFLAGS := $(CFLAGS) -fexceptions -frtti
 
 # Output name flag.
 CXX_OUT := $(CC_OUT)
@@ -63,9 +63,12 @@ CXX_DEFINE := $(CC_DEFINE)
 CXX_INCLUDE := $(CC_INCLUDE)
 
 # Flags for different build configurations.
-CXXFLAGS_DEBUG := $(CFLAGS_DEBUG)
+CXXFLAGS_DEBUG := $(CFLAGS_DEBUG) -Wabi -Wreorder -Wold-style-cast -Woverloaded-virtual -Wsign-promo -Wsynth
 CXXFLAGS_RELEASE := $(CFLAGS_RELEASE)
 CXXFLAGS_DLL_DLL := $(CFLAGS_DLL_DLL)
+
+
+CFLAGS_DEBUG += $(CFLAGS_DEBUG_EXTRA)
 
 
 # Resource compiler settings.
@@ -98,7 +101,7 @@ RC_INCLUDE := -I
 # The linker global flags.
 # (used standardized name LDFLAGS, which can be
 # overridden on the make command line)
-LDFLAGS :=
+LDFLAGS := -L.
 
 # Prefix of object libraries.
 # (can be empty)
@@ -150,7 +153,7 @@ DLLC := $(LNKC)
 # The linker global flags.
 # (includes standard name LDFLAGS, which can be
 # overridden on the make command line)
-DLLC_FLAGS := $(LNKC_FLAGS) -pie -shared
+DLLC_FLAGS := $(LNKC_FLAGS) -shared
 
 # Output name flag.
 DLLC_OUT := $(LNKC_OUT)
