--- a/make/unix/hpux/gcc64/makefile.ini
+++ b/make/unix/hpux/gcc64/makefile.ini
@@ -39,8 +39,7 @@ CC_INCLUDE := -I
 # Flags for different build configurations.
 CFLAGS_DEBUG := -Wall -g3
 CFLAGS_RELEASE := -w -O2
-CFLAGS_DLL_DLL :=
-# -fPIC
+CFLAGS_DLL_DLL := -fPIC
 
 
 # C++ compiler settings.
@@ -79,7 +78,7 @@ LDFLAGS :=
 
 # Prefix of object libraries.
 # (can be empty)
-LIB_PFX = lib
+LIB_PFX := lib
 
 # Suffix of object libraries.
 # (cannot be empty)
@@ -98,6 +97,8 @@ LNKC_FLAGS := $(CXXFLAGS) $(LDFLAGS)
 
 # Output name flag.
 LNKC_OUT := $(CXX_OUT)
+# Library include directory flag.
+LNKC_INCLUDE := -L
 
 # Flags for different build configurations.
 LNKC_FLAGS_DEBUG := $(CXXFLAGS_DEBUG)
@@ -124,6 +125,10 @@ LIBC_OUT :=
 # The linker executable.
 DLLC := $(LNKC)
 
+# Prefix of shared libraries.
+# (can be empty)
+DLL_PFX := $(LIB_PFX)
+
 # The linker global flags.
 # (includes standard name LDFLAGS, which can be
 # overridden on the make command line)
@@ -131,6 +136,8 @@ DLLC_FLAGS := $(LNKC_FLAGS) -pie -shared
 
 # Output name flag.
 DLLC_OUT := $(LNKC_OUT)
+# Library include directory flag.
+DLLC_INCLUDE := $(LNKC_INCLUDE)
 
 # Flags for different build configurations.
 DLLC_FLAGS_DEBUG := $(LNKC_FLAGS_DEBUG)
