--- a/make/unix/linux/gcc64/makefile.ini
+++ b/make/unix/linux/gcc64/makefile.ini
@@ -39,8 +39,7 @@ CC_INCLUDE := -I
 # Flags for different build configurations.
 CFLAGS_DEBUG := -Wall -g3
 CFLAGS_RELEASE := -w -O2
-CFLAGS_DLL_DLL :=
-# -fPIC
+CFLAGS_DLL_DLL := -fPIC
 
 
 # C++ compiler settings.
@@ -75,11 +74,11 @@ CXXFLAGS_DLL_DLL := $(CFLAGS_DLL_DLL)
 # The linker global flags.
 # (used standardized name LDFLAGS, which can be
 # overridden on the make command line)
-LDFLAGS :=
+LDFLAGS := -L.
 
 # Prefix of object libraries.
 # (can be empty)
-LIB_PFX = lib
+LIB_PFX := lib
 
 # Suffix of object libraries.
 # (cannot be empty)
@@ -124,10 +123,14 @@ LIBC_OUT :=
 # The linker executable.
 DLLC := $(LNKC)
 
+# Prefix of shared libraries.
+# (can be empty)
+DLL_PFX := $(LIB_PFX)
+
 # The linker global flags.
 # (includes standard name LDFLAGS, which can be
 # overridden on the make command line)
-DLLC_FLAGS := $(LNKC_FLAGS) -pie -shared
+DLLC_FLAGS := $(LNKC_FLAGS) -shared
 
 # Output name flag.
 DLLC_OUT := $(LNKC_OUT)
