--- a/make/unix/aix/xlc64/makefile.ini
+++ b/make/unix/aix/xlc64/makefile.ini
@@ -74,11 +74,11 @@ CXXFLAGS_DLL_DLL := $(CFLAGS_DLL_DLL)
 # The linker global flags.
 # (used standardized name LDFLAGS, which can be
 # overridden on the make command line)
-LDFLAGS := -brtl
+LDFLAGS := -L. -brtl
 
 # Prefix of object libraries.
 # (can be empty)
-LIB_PFX = lib
+LIB_PFX := lib
 
 # Suffix of object libraries.
 # (cannot be empty)
@@ -122,6 +122,10 @@ LIBC_OUT :=
 
 # The linker executable.
 DLLC := $(LNKC)
+
+# Prefix of shared libraries.
+# (can be empty)
+DLL_PFX := $(LIB_PFX)
 
 # The linker global flags.
 # (includes standard name LDFLAGS, which can be
