--- a/make/unix/linux/gcc32/makefile.ini
+++ b/make/unix/linux/gcc32/makefile.ini
@@ -25,7 +25,7 @@ CC := gcc
 # The compiler global flags.
 # (used standardized name CFLAFS, which can be
 # overridden on the make command line)
-#CFLAGS := -m32
+CFLAGS := -m32
 
 # Output name flag.
 CC_OUT := -o 
@@ -39,8 +39,7 @@ CC_INCLUDE := -I
 # Flags for different build configurations.
 CFLAGS_DEBUG := -Wall -g3
 CFLAGS_RELEASE := -w -O2
-CFLAGS_DLL_DLL :=
-# -fPIC
+CFLAGS_DLL_DLL := -fPIC
 
 
 # C++ compiler settings.
@@ -79,7 +78,7 @@ LDFLAGS := -L.
 
 # Prefix of object libraries.
 # (can be empty)
-LIB_PFX = lib
+LIB_PFX := lib
 
 # Suffix of object libraries.
 # (cannot be empty)
@@ -126,12 +125,12 @@ DLLC := $(LNKC)
 
 # Prefix of shared libraries.
 # (can be empty)
-DLL_PFX = lib
+DLL_PFX := $(LIB_PFX)
 
 # The linker global flags.
 # (includes standard name LDFLAGS, which can be
 # overridden on the make command line)
-DLLC_FLAGS := $(LNKC_FLAGS) -fPIC -shared
+DLLC_FLAGS := $(LNKC_FLAGS) -shared
 
 # Output name flag.
 DLLC_OUT := $(LNKC_OUT)
