Support response files
Response files can be used to avoid problems with too long command line
under DOS.

--- a/make/msw/dos16/gcc/makefile.ini
+++ b/make/msw/dos16/gcc/makefile.ini
@@ -28,7 +28,10 @@ CC := gxx
 # The compiler global flags.
 # (used standardized name CFLAFS, which can be
 # overridden on the make command line)
-CFLAGS := 
+CFLAGS :=
+
+# Using response file to avoid "line-too-long" problem.
+CC_USE_RESPONSE_FILE := 1
 
 # Output name flag.
 CC_OUT := -o 
@@ -54,6 +57,9 @@ CXX := $(CC)
 # overridden on the make command line)
 CXXFLAGS := $(CFLAGS)
 # -fexceptions
+
+# Using response file to avoid "line-too-long" problem.
+CXX_USE_RESPONSE_FILE := $(CC_USE_RESPONSE_FILE)
 
 # Output name flag.
 CXX_OUT := $(CC_OUT)
@@ -97,6 +103,9 @@ LNKC := $(CXX)
 # overridden on the make command line)
 LNKC_FLAGS := $(CXXFLAGS) $(LDFLAGS)
 
+# Using response file to avoid "line-too-long" problem.
+LNKC_USE_RESPONSE_FILE := $(CXX_USE_RESPONSE_FILE)
+
 # Output name flag.
 LNKC_OUT := $(CXX_OUT)
 
@@ -117,6 +126,9 @@ LIBC := ar
 
 # The librarian global flags.
 LIBC_FLAGS := r
+
+# Using response file to avoid "line-too-long" problem.
+#LIBC_USE_RESPONSE_FILE := $(LNKC_USE_RESPONSE_FILE)
 
 # Output name flag.
 LIBC_OUT :=
