--- a/make/msw/dos32/dmc/makefile.ini
+++ b/make/msw/dos32/dmc/makefile.ini
@@ -27,6 +27,9 @@ CC := dmc
 # overridden on the make command line)
 CFLAGS := -mx
 
+# Using response file to avoid "line-too-long" problem.
+CC_USE_RESPONSE_FILE := 1
+
 # Output name flag.
 CC_OUT := -o
 # Compile-only flag.
@@ -50,6 +53,9 @@ CXX := $(CC)
 # (used standardized name CXXFLAGS, which can be
 # overridden on the make command line)
 CXXFLAGS := $(CFLAGS) -Ae -Ar
+
+# Using response file to avoid "line-too-long" problem.
+CXX_USE_RESPONSE_FILE := $(CC_USE_RESPONSE_FILE)
 
 # Output name flag.
 CXX_OUT := $(CC_OUT)
@@ -88,6 +94,9 @@ LNKC := $(CXX)
 # (includes standard name LDFLAGS, which can be
 # overridden on the make command line)
 LNKC_FLAGS := $(LDFLAGS)
+
+# Using response file to avoid "line-too-long" problem.
+LNKC_USE_RESPONSE_FILE := $(CXX_USE_RESPONSE_FILE)
 
 # Output name flag.
 LNKC_OUT := $(CXX_OUT)
