--- a/make/global.ini
+++ b/make/global.ini
@@ -61,14 +61,14 @@ $(MXCPP_TEST_LIST_PLATFORM)
 # Main source directory.
 MXCPP_SRC_ROOT := $(MXCPP_PROJECT_ROOT)src/
 
-# Main include directory - relative to the $(MXCPP_PROJECT_ROOT).
-MXCPP_INCLUDE_ROOT := inc
+# Main include directory.
+MXCPP_INCLUDE_ROOT := $(MXCPP_PROJECT_ROOT)inc
 
 # Main resource directory.
 MXCPP_RES_ROOT := $(MXCPP_SRC_ROOT)res/
 
-# Main test directory - relative to the $(MXCPP_PROJECT_ROOT).
-MXCPP_TEST_ROOT := tests/
+# Main test directory.
+MXCPP_TEST_ROOT := $(MXCPP_PROJECT_ROOT)tests/
 
 
 # Directory of dependencies.
@@ -115,6 +115,9 @@ MXCPP_DLL_CONSTRUCT_FULLNAME = $(call MXCPP_DLL_CONSTRUCT_FULLNAME_SIMPLE,$(1))$
 MXCPP_LIBS :=	\
 $(MXCPP_LIBS_PLATFORM)
 
+
+# Name of the response file.
+MXCPP_RESPONSE_FILE := response.rsp
 
 # List of all compilers.
 #
@@ -180,7 +183,7 @@ $(foreach config,$(MXCPP_TARGET_SUBTYPE_CHARTYPE) $(MXCPP_TARGET_SUBTYPE_DBGINFO
 # @param $(5) The library configuration type.
 # @param $(6) The character configuration type.
 # @param $(7) The debuginfo configuration type.
-MXCPP_COMPILE_STANDARD = $($(1)) $(MXCPP_$(2)FLAGS) $(if $(strip $(MXCPP_$(2)FLAGS_$(5))),$(MXCPP_$(2)FLAGS_$(5)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(6))),$(MXCPP_$(2)FLAGS_$(6)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(7))),$(MXCPP_$(2)FLAGS_$(7)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(5)_$(6))),$(MXCPP_$(2)FLAGS_$(5)_$(6)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(5)_$(7))),$(MXCPP_$(2)FLAGS_$(5)_$(7)) )$(if $(strip $(4)),$(4) )$(if $(strip $($(2)FLAGS_OPTIONS)),$($(2)FLAGS_OPTIONS) )$($(1)_OUT)$$(subst /,$$(PATH_SEP),$(MXCPP_MAKE_DIR)/$$@) $(3)
+MXCPP_COMPILE_STANDARD = $(MXCPP_$(2)FLAGS) $(if $(strip $(MXCPP_$(2)FLAGS_$(5))),$(MXCPP_$(2)FLAGS_$(5)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(6))),$(MXCPP_$(2)FLAGS_$(6)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(7))),$(MXCPP_$(2)FLAGS_$(7)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(5)_$(6))),$(MXCPP_$(2)FLAGS_$(5)_$(6)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(5)_$(7))),$(MXCPP_$(2)FLAGS_$(5)_$(7)) )$(if $(strip $(4)),$(4) )$(if $(strip $($(2)FLAGS_OPTIONS)),$($(2)FLAGS_OPTIONS) )$($(1)_OUT)$$(subst /,$$(PATH_SEP),$$@) $$(subst /,$$(PATH_SEP),$(3))
 
 # The command for compiling ANSI-C sources.
 #
@@ -209,7 +212,7 @@ MXCPP_COMPILE_RC = $(call MXCPP_COMPILE_STANDARD,RC,RC,$(1),,,$(3),$(4))
 
 
 # Set the default linker build schemes.
-MXCPP_BUILD_LINK_SCHEME = $(1) $(2) $(3) $(4)$(if $(strip $(5)), $(5))$(if $(strip $(6)), $(6))
+MXCPP_BUILD_LINK_SCHEME = $(1) $(2) $(3)$(if $(strip $(4)), $(4))$(if $(strip $(5)), $(5))
 
 # The standard command for linking.
 #
@@ -220,7 +223,7 @@ MXCPP_BUILD_LINK_SCHEME = $(1) $(2) $(3) $(4)$(if $(strip $(5)), $(5))$(if $(str
 # @param $(5) The character configuration type.
 # @param $(6) The debuginfo configuration type.
 MXCPP_BUILD_LINK_STANDARD = $(call $(if $(strip $($(1)_SCHEME)),$(1)_SCHEME,MXCPP_BUILD_LINK_SCHEME),\
-$($(1)),$(MXCPP_$(1)_FLAGS) $(if $(strip $(MXCPP_$(1)_FLAGS_$(5))),$(MXCPP_$(1)_FLAGS_$(5)) )$(if $(strip $(MXCPP_$(1)_FLAGS_$(6))),$(MXCPP_$(1)_FLAGS_$(6)) )$(if $(strip $($(1)_FLAGS_OPTIONS)),$($(1)_FLAGS_OPTIONS) ),$($(1)_OUT)$$@,$(2),$(3),$(4))
+$(MXCPP_$(1)_FLAGS) $(if $(strip $(MXCPP_$(1)_FLAGS_$(5))),$(MXCPP_$(1)_FLAGS_$(5)) )$(if $(strip $(MXCPP_$(1)_FLAGS_$(6))),$(MXCPP_$(1)_FLAGS_$(6)) )$(if $(strip $($(1)_FLAGS_OPTIONS)),$($(1)_FLAGS_OPTIONS) ),$($(1)_OUT)$$@,$(2),$(3),$(4))
 
 #$(if $(strip $($(1)_SCHEME)),$(call $(1)_SCHEME,$($(1)),,$(2),$(3),$(4)),\
 #$(error The build scheme is not defined for the $(1) linker!))
@@ -235,7 +238,7 @@ $($(1)),$(MXCPP_$(1)_FLAGS) $(if $(strip $(MXCPP_$(1)_FLAGS_$(5))),$(MXCPP_$(1)_
 # @param $(1) The object files list.
 # @param $(2) The character configuration type.
 # @param $(3) The debuginfo configuration type.
-MXCPP_BUILD_LIB = $(LIBC) $(MXCPP_LIBC_FLAGS) $(if $(strip $(MXCPP_LIBC_FLAGS_$(2))),$(MXCPP_LIBC_FLAGS_$(2)) )$(if $(strip $(MXCPP_LIBC_FLAGS_$(3))),$(MXCPP_LIBC_FLAGS_$(3)) )$(LIBC_OUT)$$@ $(1)
+MXCPP_BUILD_LIB = $(MXCPP_LIBC_FLAGS) $(if $(strip $(MXCPP_LIBC_FLAGS_$(2))),$(MXCPP_LIBC_FLAGS_$(2)) )$(if $(strip $(MXCPP_LIBC_FLAGS_$(3))),$(MXCPP_LIBC_FLAGS_$(3)) )$(LIBC_OUT)$$@ $(1)
 
 # The command for building dynamic libraries.
 #
