--- a/make/msw/win16/watcom/makefile.ini
+++ b/make/msw/win16/watcom/makefile.ini
@@ -27,6 +27,9 @@ CC := wcc
 # overridden on the make command line)
 CFLAGS := -ml -zu -zq -bt=windows
 
+# Using response file to avoid "line-too-long" problem.
+CC_USE_RESPONSE_FILE := 1
+
 # Output name flag.
 CC_OUT := -fo
 # Compile-only flag.
@@ -55,6 +58,9 @@ CXX := wpp
 # (used standardized name CXXFLAGS, which can be
 # overridden on the make command line)
 CXXFLAGS := $(CFLAGS) -xs -xr
+
+# Using response file to avoid "line-too-long" problem.
+CXX_USE_RESPONSE_FILE := $(CC_USE_RESPONSE_FILE)
 
 # Output name flag.
 CXX_OUT := $(CC_OUT)
