--- a/make/msw/win32/bcc/makefile.ini
+++ b/make/msw/win32/bcc/makefile.ini
@@ -119,7 +119,7 @@ LIB_SFX := lib
 LNKC := ilink32
 
 # The linker build scheme.
-LNKC_SCHEME = $(1) $(2) c0x32.obj $(4), $(3),, cw32mt.lib import32.lib $(6),, $(5)
+LNKC_SCHEME = $(1) c0x32.obj $(3), $(2),, cw32mt.lib import32.lib $(5),, $(4)
 
 # The linker global flags.
 # (includes standard name LDFLAGS, which can be
@@ -152,7 +152,7 @@ DLLC := $(LNKC)
 
 # The linker build scheme.
 DLLC_SCHEME = $(LNKC_SCHEME)
-DLLC_SCHEME = $(1) $(2) c0d32.obj $(4), $(3),, cw32mt.lib import32.lib $(6),, $(5)
+DLLC_SCHEME = $(1) c0d32.obj $(3), $(2),, cw32mt.lib import32.lib $(5),, $(4)
 
 # The linker global flags.
 # (includes standard name LDFLAGS, which can be
