Use global makefile settings for GCC

--- a/make/msw/dos16/gcc/makefile.ini
+++ b/make/msw/dos16/gcc/makefile.ini
@@ -8,16 +8,9 @@
 #
 
 
-############################
-#     Compiler options     #
-############################
+# Include default GCC definitions.
+include ../../../setup/gcc.ini
 
-# Suffix of object file names.
-# (cannot be empty)
-OBJ_SFX := obj
-
-
-# ANSI-C compiler settings.
 
 # The compiler executable.
 CC := gxx
@@ -25,117 +18,21 @@ CC := gxx
 # confusion between DJGPP and MinGW in batch processing mode for all MS
 # platforms.
 
-# The compiler global flags.
-# (used standardized name CFLAFS, which can be
-# overridden on the make command line)
-CFLAGS :=
-
 # Using response file to avoid "line-too-long" problem.
 CC_USE_RESPONSE_FILE := 1
-
-# Output name flag.
-CC_OUT := -o 
-# Compile-only flag.
-CC_COMPILE_ONLY := -c
-# Macro definition flag.
-CC_DEFINE := -D
-# Include directory flag.
-CC_INCLUDE := -I
-
-# Flags for different build configurations.
-CFLAGS_DEBUG := -g3 -Wall
-CFLAGS_RELEASE := -O2 -w
-
-
-# C++ compiler settings.
 
 # The compiler executable.
 CXX := $(CC)
 
-# The compiler global flags.
-# (used standardized name CXXFLAGS, which can be
-# overridden on the make command line)
-CXXFLAGS := $(CFLAGS)
-# -fexceptions
-
 # Using response file to avoid "line-too-long" problem.
 CXX_USE_RESPONSE_FILE := $(CC_USE_RESPONSE_FILE)
 
-# Output name flag.
-CXX_OUT := $(CC_OUT)
-# Compile-only flag.
-CXX_COMPILE_ONLY := $(CC_COMPILE_ONLY)
-# Macro definition flag.
-CXX_DEFINE := $(CC_DEFINE)
-# Include directory flag.
-CXX_INCLUDE := $(CC_INCLUDE)
-
-# Flags for different build configurations.
-CXXFLAGS_DEBUG := $(CFLAGS_DEBUG)
-CXXFLAGS_RELEASE := $(CFLAGS_RELEASE)
-
-
-##########################
-#     Linker options     #
-##########################
-
-# The linker global flags.
-# (used standardized name LDFLAGS, which can be
-# overridden on the make command line)
-LDFLAGS := -L.
-
-# Prefix of object libraries.
-# (can be empty)
-LIB_PFX = lib
-
-# Suffix of object libraries.
-# (cannot be empty)
-LIB_SFX := a
-
-
-# C++ linker settings.
 
 # The linker executable.
 LNKC := $(CXX)
 
-# The linker global flags.
-# (includes standard name LDFLAGS, which can be
-# overridden on the make command line)
-LNKC_FLAGS := $(CXXFLAGS) $(LDFLAGS)
-
 # Using response file to avoid "line-too-long" problem.
 LNKC_USE_RESPONSE_FILE := $(CXX_USE_RESPONSE_FILE)
-
-# Output name flag.
-LNKC_OUT := $(CXX_OUT)
-
-# Flags for different build configurations.
-LNKC_FLAGS_DEBUG := $(CXXFLAGS_DEBUG)
-LNKC_FLAGS_RELEASE := $(CXXFLAGS_RELEASE)
-
-LNKC_LIB_PFX := -l
-
-
-# C++ librarian compiler settings.
-
-# The librarian executable.
-LIBC := ar
-# For now, usage of MinGW (Win32) AR is required, because DOS-16 programs have
-# commandline-too-long problems (which is the case, when all object file names
-# are used on the command line).
-
-# The librarian global flags.
-LIBC_FLAGS := r
-
-# Using response file to avoid "line-too-long" problem.
-#LIBC_USE_RESPONSE_FILE := $(LNKC_USE_RESPONSE_FILE)
-
-# Output name flag.
-LIBC_OUT :=
-
-
-# Addditional clean masks for 'clean...' targets.
-MXCPP_CLEAN_MASK = *.o *.s
 
 
 # Include parent definitions.
