--- a/make/setup/gcc.ini
+++ b/make/setup/gcc.ini
@@ -14,7 +14,7 @@
 
 # Suffix of object file names.
 # (cannot be empty)
-OBJ_SFX := obj
+OBJ_SFX := o
 
 
 # ANSI-C compiler settings.
@@ -167,8 +167,5 @@ DLLC_FLAGS_DLL := $(CXXFLAGS_DLL) $(CXXFLAGS_DLL_DLL)
 # Addditional clean masks for 'clean...' targets.
 MXCPP_CLEAN_MASK = *.o *.s
 
-
-# Include parent definitions.
-include ../system.ini
 
 # EOF #
