--- a/make/msw/win32/gcc/makefile.ini
+++ b/make/msw/win32/gcc/makefile.ini
@@ -8,164 +8,8 @@
 #
 
 
-############################
-#     Compiler options     #
-############################
-
-# Suffix of object file names.
-# (cannot be empty)
-OBJ_SFX := obj
-
-
-# ANSI-C compiler settings.
-
-# The compiler executable.
-CC := gcc
-
-# The compiler global flags.
-# (used standardized name CFLAFS, which can be
-# overridden on the make command line)
-CFLAGS := -Winline -Winvalid-pch
-
-# Output name flag.
-CC_OUT := -o 
-# Compile-only flag.
-CC_COMPILE_ONLY := -c
-# Macro definition flag.
-CC_DEFINE := -D
-# Include directory flag.
-CC_INCLUDE := -I
-
-# Flags for different build configurations.
-CFLAGS_DEBUG := -g3 -Wall -Wextra -Wfloat-equal -Wundef -Wendif-labels -Wshadow -Wpointer-arith -Wcast-qual -Wcast-align -Wwrite-strings -Wconversion -Waggregate-return -Wmissing-noreturn -Wmissing-format-attribute -Wpacked -Wpadded -Wredundant-decls -Wunreachable-code
-CFLAGS_DEBUG_EXTRA := -Wtraditional -Wdeclaration-after-statement -Wbad-function-cast -Wstrict-prototypes -Wold-style-definition -Wmissing-prototypes -Wmissing-declarations -Wnested-externs
-CFLAGS_RELEASE := -O2 -Wdisabled-optimization
-CFLAGS_DLL_DLL := -fPIC
-
-
-# C++ compiler settings.
-
-# The compiler executable.
-CXX := g++
-
-# The compiler global flags.
-# (used standardized name CXXFLAGS, which can be
-# overridden on the make command line)
-CXXFLAGS := $(CFLAGS) -fexceptions -frtti
-
-# Output name flag.
-CXX_OUT := $(CC_OUT)
-# Compile-only flag.
-CXX_COMPILE_ONLY := $(CC_COMPILE_ONLY)
-# Macro definition flag.
-CXX_DEFINE := $(CC_DEFINE)
-# Include directory flag.
-CXX_INCLUDE := $(CC_INCLUDE)
-
-# Flags for different build configurations.
-CXXFLAGS_DEBUG := $(CFLAGS_DEBUG) -Wabi -Wreorder -Wold-style-cast -Woverloaded-virtual -Wsign-promo -Wsynth
-CXXFLAGS_RELEASE := $(CFLAGS_RELEASE)
-CXXFLAGS_DLL_DLL := $(CFLAGS_DLL_DLL)
-
-
-CFLAGS_DEBUG += $(CFLAGS_DEBUG_EXTRA)
-
-
-# Resource compiler settings.
-
-# The compiler executable.
-RC := windres
-
-# Suffix of compiled resource files.
-# (cannot be empty, if RC defined)
-RES_SFX := $(OBJ_SFX)
-
-# The compiler global flags.
-# (used standardized name RCFLAGS, which can be
-# overridden on the make command line)
-RCFLAGS :=
-
-# Output name flag.
-RC_OUT := -o
-
-# Macro definition flag.
-RC_DEFINE := -D
-# Include directory flag.
-RC_INCLUDE := -I
-
-
-##########################
-#     Linker options     #
-##########################
-
-# The linker global flags.
-# (used standardized name LDFLAGS, which can be
-# overridden on the make command line)
-LDFLAGS := -L.
-
-# Prefix of object libraries.
-# (can be empty)
-LIB_PFX = lib
-
-# Suffix of object libraries.
-# (cannot be empty)
-LIB_SFX := a
-
-
-# C++ linker settings.
-
-# The linker executable.
-LNKC := $(CXX)
-
-# The linker global flags.
-# (includes standard name LDFLAGS, which can be
-# overridden on the make command line)
-LNKC_FLAGS := $(CXXFLAGS) $(LDFLAGS)
-
-# Output name flag.
-LNKC_OUT := $(CXX_OUT)
-
-# Flags for different build configurations.
-LNKC_FLAGS_DEBUG := $(CXXFLAGS_DEBUG)
-LNKC_FLAGS_RELEASE := $(CXXFLAGS_RELEASE)
-LNKC_FLAGS_DLL := $(CXXFLAGS_DLL) $(CXXFLAGS_DLL_EXE)
-
-LNKC_LIB_PFX := -l
-
-
-# C++ librarian compiler settings.
-
-# The librarian executable.
-LIBC := ar
-
-# The librarian global flags.
-LIBC_FLAGS := r
-
-# Output name flag.
-LIBC_OUT :=
-
-
-# C++ dynamic library linker settings.
-
-# The linker executable.
-DLLC := $(LNKC)
-
-# The linker global flags.
-# (includes standard name LDFLAGS, which can be
-# overridden on the make command line)
-DLLC_FLAGS := $(LNKC_FLAGS) -shared
-
-# Output name flag.
-DLLC_OUT := $(LNKC_OUT)
-
-# Flags for different build configurations.
-DLLC_FLAGS_DEBUG := $(LNKC_FLAGS_DEBUG)
-DLLC_FLAGS_RELEASE := $(LNKC_FLAGS_RELEASE)
-DLLC_FLAGS_DLL := $(CXXFLAGS_DLL) $(CXXFLAGS_DLL_DLL)
-
-
-# Addditional clean masks for 'clean...' targets.
-MXCPP_CLEAN_MASK = *.o *.s
+# Include default GCC definitions.
+include ../../../setup/gcc.ini
 
 
 # Include parent definitions.
