Use global makefile settings for WATCOM

--- a/make/msw/setup/watcom.ini
+++ b/make/msw/setup/watcom.ini
@@ -25,7 +25,7 @@ CC := wcc386
 # The compiler global flags.
 # (used standardized name CFLAFS, which can be
 # overridden on the make command line)
-CFLAGS := -zq -bt=nt
+CFLAGS := -zq $(CFLAGS_TARGET)
 
 # Output name flag.
 CC_OUT := -fo
@@ -40,8 +40,8 @@ CC_INCLUDE := -i
 CFLAGS_DEBUG := -od -d2 -db -wx
 CFLAGS_RELEASE := -ox -d0 -w0
 CFLAGS_LIB := -bc
-CFLAGS_LIBMT := -bc -bm
-CFLAGS_DLL := -bm
+CFLAGS_LIBMT := -bc $(CFLAGS_MT)
+CFLAGS_DLL := $(CFLAGS_MT)
 CFLAGS_DLL_DLL := -bd
 CFLAGS_DLL_EXE := -bc
 
@@ -87,7 +87,7 @@ RES_SFX := res
 # The compiler global flags.
 # (used standardized name RCFLAGS, which can be
 # overridden on the make command line)
-RCFLAGS := -q -r -bt=nt
+RCFLAGS := -q -r $(RCFLAGS_TARGET)
 
 # Output name flag.
 RC_OUT := -fo
@@ -124,7 +124,7 @@ LNKC := wlink
 # The linker global flags.
 # (includes standard name LDFLAGS, which can be
 # overridden on the make command line)
-LNKC_FLAGS := $(LDFLAGS) system nt
+LNKC_FLAGS := $(LDFLAGS)
 
 LNKC_OBJ := file 
 LNKC_RES := option resource=
@@ -159,7 +159,7 @@ DLLC := $(LNKC)
 # The linker global flags.
 # (includes standard name LDFLAGS, which can be
 # overridden on the make command line)
-DLLC_FLAGS := $(LDFLAGS) system nt_dll option implib
+DLLC_FLAGS := $(LDFLAGS) option implib
 
 DLLC_OBJ := $(LNKC_OBJ)
 DLLC_RES := $(LNKC_RES)
@@ -185,9 +185,5 @@ MXCPP_CLEAN_MASK_TEST_DEBUG = $(1)*.mbr
 # Addditional clean masks for 'cleanall...' targets.
 MXCPP_CLEANALL_MASK_DLL = $(2:.dll=.lib)
 MXCPP_CLEANALL_MASK_DLL_DEBUG = 
-
-
-# Include parent definitions.
-include ../system.ini
 
 # EOF #
