--- a/make/msw/win32/watcom/makefile.ini
+++ b/make/msw/win32/watcom/makefile.ini
@@ -8,183 +8,18 @@
 #
 
 
-############################
-#     Compiler options     #
-############################
+# The target flags.
+CFLAGS_TARGET := -bt=nt
+CFLAGS_MT := -bm
+RCFLAGS_TARGET := -bt=nt
 
-# Suffix of object file names.
-# (cannot be empty)
-OBJ_SFX := obj
+# Include default WATCOM definitions.
+include ../../setup/watcom.ini
 
-
-# ANSI-C compiler settings.
-
-# The compiler executable.
-CC := wcc386
-
-# The compiler global flags.
-# (used standardized name CFLAFS, which can be
-# overridden on the make command line)
-CFLAGS := -zq -bt=nt
-
-# Output name flag.
-CC_OUT := -fo
-# Compile-only flag.
-CC_COMPILE_ONLY :=
-# Macro definition flag.
-CC_DEFINE := -d
-# Include directory flag.
-CC_INCLUDE := -i
-
-# Flags for different build configurations.
-CFLAGS_DEBUG := -od -d2 -db -wx
-CFLAGS_RELEASE := -ox -d0 -w0
-CFLAGS_LIB := -bc
-CFLAGS_LIBMT := -bc -bm
-CFLAGS_DLL := -bm
-CFLAGS_DLL_DLL := -bd
-CFLAGS_DLL_EXE := -bc
-
-
-# C++ compiler settings.
-
-# The compiler executable.
-CXX := wpp386
-
-# The compiler global flags.
-# (used standardized name CXXFLAGS, which can be
-# overridden on the make command line)
-CXXFLAGS := $(CFLAGS) -xs -xr
-
-# Output name flag.
-CXX_OUT := $(CC_OUT)
-# Compile-only flag.
-CXX_COMPILE_ONLY := $(CC_COMPILE_ONLY)
-# Macro definition flag.
-CXX_DEFINE := $(CC_DEFINE)
-# Include directory flag.
-CXX_INCLUDE := $(CC_INCLUDE)
-
-# Flags for different build configurations.
-CXXFLAGS_DEBUG := $(CFLAGS_DEBUG)
-CXXFLAGS_RELEASE := $(CFLAGS_RELEASE)
-CXXFLAGS_LIB := $(CFLAGS_LIB)
-CXXFLAGS_LIBMT := $(CFLAGS_LIBMT)
-CXXFLAGS_DLL := $(CFLAGS_DLL)
-CXXFLAGS_DLL_DLL := $(CFLAGS_DLL_DLL)
-CXXFLAGS_DLL_EXE := $(CFLAGS_DLL_EXE)
-
-
-# Resource compiler settings.
-
-# The compiler executable.
-RC := wrc
-
-# Suffix of compiled resource files.
-# (cannot be empty, if RC defined)
-RES_SFX := res
-
-# The compiler global flags.
-# (used standardized name RCFLAGS, which can be
-# overridden on the make command line)
-RCFLAGS := -q -r -bt=nt
-
-# Output name flag.
-RC_OUT := -fo
-
-# Macro definition flag.
-RC_DEFINE := -D
-# Include directory flag.
-RC_INCLUDE := -i
-
-# Flags for different build configurations.
-RCFLAGS_DEBUG := -p
-RCFLAGS_RELEASE :=
-
-
-##########################
-#     Linker options     #
-##########################
 
 # The linker global flags.
-# (used standardized name LDFLAGS, which can be
-# overridden on the make command line)
-LDFLAGS := option quiet
-
-# Suffix of object libraries.
-# (cannot be empty)
-LIB_SFX := lib
-
-
-# C++ linker settings.
-
-# The linker executable.
-LNKC := wlink
-
-# The linker global flags.
-# (includes standard name LDFLAGS, which can be
-# overridden on the make command line)
-LNKC_FLAGS := $(LDFLAGS) system nt
-
-LNKC_OBJ := file 
-LNKC_RES := option resource=
-# Output name flag.
-LNKC_OUT := name 
-
-# Flags for different build configurations.
-LNKC_FLAGS_DEBUG := debug watcom all
-LNKC_FLAGS_RELEASE := option eliminate
-
-LNKC_LIB_PFX := library 
-LNKC_LIB_SFX :=
-
-
-# C++ librarian compiler settings.
-
-# The librarian executable.
-LIBC := wlib
-
-# The librarian global flags.
-LIBC_FLAGS := -q -b -n
-
-# Output name flag.
-LIBC_OUT :=
-
-
-# C++ dynamic library linker settings.
-
-# The linker executable.
-DLLC := $(LNKC)
-
-# The linker global flags.
-# (includes standard name LDFLAGS, which can be
-# overridden on the make command line)
-DLLC_FLAGS := $(LDFLAGS) system nt_dll option implib
-
-DLLC_OBJ := $(LNKC_OBJ)
-DLLC_RES := $(LNKC_RES)
-# Output name flag.
-DLLC_OUT := $(LNKC_OUT)
-
-# Flags for different build configurations.
-DLLC_FLAGS_DEBUG := $(LNKC_FLAGS_DEBUG)
-DLLC_FLAGS_RELEASE := $(LNKC_FLAGS_RELEASE)
-
-# Tool for creating the import library from the DLL.
-#DLLC_IMPLIB := $(LIBC)
-#DLLC_IMPLIB_FLAGS := $(LIBC_FLAGS)
-#DLLC_IMPLIB_OUT := $(LIBC_OUT)
-
-
-# Addditional clean masks for 'clean...' targets.
-MXCPP_CLEAN_MASK = *.err
-MXCPP_CLEAN_MASK_DEBUG = $(1)*.mbr
-MXCPP_CLEAN_MASK_TEST = 
-MXCPP_CLEAN_MASK_TEST_DEBUG = $(1)*.mbr
-
-# Addditional clean masks for 'cleanall...' targets.
-MXCPP_CLEANALL_MASK_DLL = $(2:.dll=.lib)
-MXCPP_CLEANALL_MASK_DLL_DEBUG = 
+LNKC_FLAGS += system nt
+DLLC_FLAGS += system nt_dll
 
 
 # Include parent definitions.
