--- a/make/msw/dos32/watcom/makefile.ini
+++ b/make/msw/dos32/watcom/makefile.ini
@@ -8,122 +8,30 @@
 #
 
 
-############################
-#     Compiler options     #
-############################
-
-# Suffix of object file names.
-# (cannot be empty)
-OBJ_SFX := obj
+# The target flags.
+CFLAGS_TARGET := -ms -bt=dos32x
 
 
-# ANSI-C compiler settings.
+# Include default WATCOM definitions.
+include ../../setup/watcom.ini
+
 
 # The compiler executable.
 CC := wcc
 
-# The compiler global flags.
-# (used standardized name CFLAFS, which can be
-# overridden on the make command line)
-CFLAGS := -zq -bc -bt=dos
-
 # Using response file to avoid "line-too-long" problem.
 CC_USE_RESPONSE_FILE := 1
 
-# Output name flag.
-CC_OUT := -fo
-# Compile-only flag.
-CC_COMPILE_ONLY :=
-# Macro definition flag.
-CC_DEFINE := -d
-# Include directory flag.
-CC_INCLUDE := -i
-
-# Flags for different build configurations.
-CFLAGS_DEBUG := -od -d2 -db -wx
-CFLAGS_RELEASE := -ox -d0 -w0
-
-
-# C++ compiler settings.
 
 # The compiler executable.
 CXX := wpp
 
-# The compiler global flags.
-# (used standardized name CXXFLAGS, which can be
-# overridden on the make command line)
-CXXFLAGS := $(CFLAGS) -xs -xr
-
 # Using response file to avoid "line-too-long" problem.
 CXX_USE_RESPONSE_FILE := $(CC_USE_RESPONSE_FILE)
 
-# Output name flag.
-CXX_OUT := $(CC_OUT)
-# Compile-only flag.
-CXX_COMPILE_ONLY := $(CC_COMPILE_ONLY)
-# Macro definition flag.
-CXX_DEFINE := $(CC_DEFINE)
-# Include directory flag.
-CXX_INCLUDE := $(CC_INCLUDE)
-
-# Flags for different build configurations.
-CXXFLAGS_DEBUG := $(CFLAGS_DEBUG)
-CXXFLAGS_RELEASE := $(CFLAGS_RELEASE)
-
-
-##########################
-#     Linker options     #
-##########################
 
 # The linker global flags.
-# (used standardized name LDFLAGS, which can be
-# overridden on the make command line)
-LDFLAGS := option quiet
-
-# Suffix of object libraries.
-# (cannot be empty)
-LIB_SFX := lib
-
-
-# C++ linker settings.
-
-# The linker executable.
-LNKC := wlink
-
-# The linker global flags.
-# (includes standard name LDFLAGS, which can be
-# overridden on the make command line)
-LNKC_FLAGS := $(LDFLAGS) system dos32x
-
-LNKC_OBJ := file 
-# Output name flag.
-LNKC_OUT := name 
-
-# Flags for different build configurations.
-LNKC_FLAGS_DEBUG := debug watcom all
-LNKC_FLAGS_RELEASE := option eliminate
-
-LNKC_LIB_PFX := library 
-LNKC_LIB_SFX :=
-
-
-# C++ librarian compiler settings.
-
-# The librarian executable.
-LIBC := wlib
-
-# The librarian global flags.
-LIBC_FLAGS := -q -b -n
-
-# Output name flag.
-LIBC_OUT :=
-
-
-# Addditional clean masks for 'clean...' targets.
-MXCPP_CLEAN_MASK = *.err
-MXCPP_CLEAN_MASK_DEBUG = $(1)*.mbr
-MXCPP_CLEAN_MASK_TEST = 
-MXCPP_CLEAN_MASK_TEST_DEBUG = $(1)*.mbr
+LNKC_FLAGS += system dos32x
 
 
 # Include parent definitions.
