Use global makefile settings for MSVC

--- a/make/msw/setup/msvc.ini
+++ b/make/msw/setup/msvc.ini
@@ -37,12 +37,12 @@ CC_DEFINE := -D
 CC_INCLUDE := -I
 
 # Flags for different build configurations.
-CFLAGS_DEBUG := -W4 -Od -ZI -GZ
+CFLAGS_DEBUG := -W4 -Od $(CFLAGS_DEBUG_EXTRA)
 CFLAGS_RELEASE := -W3 -O2
-CFLAGS_LIB_DEBUG := -MLd
-CFLAGS_LIB_RELEASE := -ML
-CFLAGS_LIBMT_DEBUG := -MTd
-CFLAGS_LIBMT_RELEASE := -MT
+CFLAGS_LIB_DEBUG := $(CFLAGS_LIB_RUNTIME)d
+CFLAGS_LIB_RELEASE := $(CFLAGS_LIB_RUNTIME)
+CFLAGS_LIBMT_DEBUG := $(CFLAGS_LIBMT_RUNTIME)d
+CFLAGS_LIBMT_RELEASE := $(CFLAGS_LIBMT_RUNTIME)
 CFLAGS_DLL_DEBUG := -MDd
 CFLAGS_DLL_RELEASE := -MD
 
@@ -114,7 +114,7 @@ RC_INCLUDE := /i
 # The linker global flags.
 # (used standardized name LDFLAGS, which can be
 # overridden on the make command line)
-LDFLAGS := /nologo /machine:I386 /subsystem:console
+LDFLAGS := /nologo /subsystem:console $(LDFLAGS_TARGET)
 
 # Suffix of object libraries.
 # (cannot be empty)
@@ -180,9 +180,5 @@ MXCPP_CLEAN_MASK_TEST_DEBUG = $(1)*.pdb $(1)*.ilk $(1)$(CFLAGS_VCDB_NAME).idb
 # Addditional clean masks for 'cleanall...' targets.
 MXCPP_CLEANALL_MASK_DLL = $(2:.dll=.lib) $(2:.dll=.exp)
 MXCPP_CLEANALL_MASK_DLL_DEBUG = $(2:.dll=.pdb) $(2:.dll=.ilk)
-
-
-# Include parent definitions.
-include ../system.ini
 
 # EOF #
