--- a/make/msw/win32/msvc8/makefile.ini
+++ b/make/msw/win32/msvc8/makefile.ini
@@ -8,179 +8,22 @@
 #
 
 
-############################
-#     Compiler options     #
-############################
+CFLAGS_DEBUG_EXTRA := -Zi -RTCsu
 
-# Suffix of object file names.
-# (cannot be empty)
-OBJ_SFX := obj
+# MT runtime always used.
+# (ML runtime deprecated)
+CFLAGS_LIB_RUNTIME := -MT
+CFLAGS_LIBMT_RUNTIME := -MT
 
-
-# ANSI-C compiler settings.
-
-# The compiler executable.
-CC := cl
-
-# The compiler global flags.
-# (used standardized name CFLAFS, which can be
-# overridden on the make command line)
-CFLAGS := -nologo -GF
-
-# Output name flag.
-CC_OUT := -Fo
-# Compile-only flag.
-CC_COMPILE_ONLY := -c
-# Macro definition flag.
-CC_DEFINE := -D
-# Include directory flag.
-CC_INCLUDE := -I
-
-# Flags for different build configurations.
-CFLAGS_DEBUG := -W4 -Od -ZI -RTCcsu
-CFLAGS_RELEASE := -W3 -O2
-# MSVC 8 does not any more have non-threaded runtime.
-CFLAGS_LIB_DEBUG := -MTd
-CFLAGS_LIB_RELEASE := -MT
-CFLAGS_LIBMT_DEBUG := -MTd
-CFLAGS_LIBMT_RELEASE := -MT
-CFLAGS_DLL_DEBUG := -MDd
-CFLAGS_DLL_RELEASE := -MD
-
-# Special options, which are expanded at-the-place.
+# MSVC database name.
 CFLAGS_VCDB_NAME := vc80
-CFLAGS_OPTIONS = -Fd$(CURDIR)\$$(@D)\$(CFLAGS_VCDB_NAME).pdb
+
+# Linker target flags.
+LDFLAGS_TARGET := /machine:I386
 
 
-# C++ compiler settings.
-
-# The compiler executable.
-CXX := $(CC)
-
-# The compiler global flags.
-# (used standardized name CXXFLAGS, which can be
-# overridden on the make command line)
-CXXFLAGS := $(CFLAGS) -EHsc -GR
-
-# Output name flag.
-CXX_OUT := $(CC_OUT)
-# Compile-only flag.
-CXX_COMPILE_ONLY := $(CC_COMPILE_ONLY)
-# Macro definition flag.
-CXX_DEFINE := $(CC_DEFINE)
-# Include directory flag.
-CXX_INCLUDE := $(CC_INCLUDE)
-
-# Flags for different build configurations.
-CXXFLAGS_DEBUG := $(CFLAGS_DEBUG)
-CXXFLAGS_RELEASE := $(CFLAGS_RELEASE)
-CXXFLAGS_LIB_DEBUG := $(CFLAGS_LIB_DEBUG)
-CXXFLAGS_LIB_RELEASE := $(CFLAGS_LIB_RELEASE)
-CXXFLAGS_LIBMT_DEBUG := $(CFLAGS_LIBMT_DEBUG)
-CXXFLAGS_LIBMT_RELEASE := $(CFLAGS_LIBMT_RELEASE)
-CXXFLAGS_DLL_DEBUG := $(CFLAGS_DLL_DEBUG)
-CXXFLAGS_DLL_RELEASE := $(CFLAGS_DLL_RELEASE)
-
-# Special options, which are expanded at-the-place.
-CXXFLAGS_OPTIONS = $(CFLAGS_OPTIONS)
-
-
-# Resource compiler settings.
-
-# The compiler executable.
-RC := rc
-
-# Suffix of compiled resource files.
-# (cannot be empty, if RC defined)
-RES_SFX := res
-
-# The compiler global flags.
-# (used standardized name RCFLAGS, which can be
-# overridden on the make command line)
-RCFLAGS := /n /r
-
-# Output name flag.
-RC_OUT := /fo
-
-# Macro definition flag.
-RC_DEFINE := /d
-# Include directory flag.
-RC_INCLUDE := /i
-
-
-##########################
-#     Linker options     #
-##########################
-
-# The linker global flags.
-# (used standardized name LDFLAGS, which can be
-# overridden on the make command line)
-LDFLAGS := /nologo /machine:I386 /subsystem:console
-
-# Suffix of object libraries.
-# (cannot be empty)
-LIB_SFX := lib
-
-
-# C++ linker settings.
-
-# The linker executable.
-LNKC := link
-
-# The linker global flags.
-# (includes standard name LDFLAGS, which can be
-# overridden on the make command line)
-LNKC_FLAGS := $(LDFLAGS) user32.lib
-
-# Output name flag.
-LNKC_OUT := /out:
-
-# Flags for different build configurations.
-LNKC_FLAGS_DEBUG := /debug /opt:noref
-LNKC_FLAGS_RELEASE := /opt:ref
-
-LNKC_LIB_SFX := .$(LIB_SFX)
-
-
-# C++ librarian compiler settings.
-
-# The librarian executable.
-LIBC := $(LNKC)
-
-# The librarian global flags.
-LIBC_FLAGS := /lib /nologo
-
-# Output name flag.
-LIBC_OUT := $(LNKC_OUT)
-
-
-# C++ dynamic library linker settings.
-
-# The linker executable.
-DLLC := $(LNKC)
-
-# The linker global flags.
-# (includes standard name LDFLAGS, which can be
-# overridden on the make command line)
-DLLC_FLAGS := /dll $(LNKC_FLAGS)
-
-# Output name flag.
-DLLC_OUT := $(LNKC_OUT)
-
-# Flags for different build configurations.
-DLLC_FLAGS_DEBUG := $(LNKC_FLAGS_DEBUG)
-DLLC_FLAGS_RELEASE := $(LNKC_FLAGS_RELEASE)
-
-
-# Addditional clean masks for 'clean...' targets.
-MXCPP_CLEAN_MASK = $(1)*.sbr
-MXCPP_CLEAN_MASK_DEBUG = $(1)$(CFLAGS_VCDB_NAME).pdb $(1)$(CFLAGS_VCDB_NAME).idb
-MXCPP_CLEAN_MASK_TEST = $(1)*.sbr $(1)*.manifest
-MXCPP_CLEAN_MASK_TEST_DEBUG = $(1)$(CFLAGS_VCDB_NAME).idb $(1)*.pdb $(1)*.ilk
-
-# Addditional clean masks for 'cleanall...' targets.
-MXCPP_CLEANALL_MASK_DLL = $(2:.dll=.lib) $(2:.dll=.exp) $(2).manifest
-MXCPP_CLEANALL_MASK_DLL_DEBUG = $(2:.dll=.pdb) $(2:.dll=.ilk)
+# Include default MSVC definitions.
+include ../../setup/msvc.ini
 
 
 # Include parent definitions.
